Changed emoji trigger from ':' to '::'

--- a/app/views/layouts/_init_auto_complete.html.haml
+++ b/app/views/layouts/_init_auto_complete.html.haml
@@ -8,7 +8,7 @@
     GitLab.GfmAutoComplete.Emoji.data = $.map(GitLab.GfmAutoComplete.Emoji.data, function(value) {
       return {
         name: value,
-        insert: value+':',
+        insert: value+'::',
         image: '#{image_path("emoji")}/'+value+'.png'
       }
     });
